# chat-cinepulse-ai-api

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/agents/: movie_agent.py
app/api/: chat.py
app/core/: auth.py  config.py  firebase.py
app/services/: tmdb_service.py
app/tools/: search_movie.py  tmdb_tools.py
