[project]
name = "cinepulse-ai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "firebase-admin>=7.4.0",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-openai>=0.3.35",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=3.1.0",
    "openai>=2.43.0",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "uvicorn>=0.49.0",
]
